# ProstaMaszynaStan-w

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Client.hpp  Command.hpp  Database.hpp  Enums.hpp  Menu.hpp
headers/commands/: CommandCreate.hpp  CommandExit.hpp  CommandFactory.hpp  CommandListDatabase.hpp  CommandListMenu.hpp  CommandRead.hpp  CommandWrite.hpp
